// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> should render <textarea> tag 1`] = `
<textarea
  class="Textarea__StyledTextarea-zyqcnp-0 jiRGJn"
/>
`;

exports[`<Textarea /> should render correctly with custom props 1`] = `
<textarea
  class="Textarea__StyledTextarea-zyqcnp-0 brWSFq"
/>
`;

exports[`<Textarea /> should render correctly with default props 1`] = `
<textarea
  class="Textarea__StyledTextarea-zyqcnp-0 jiRGJn"
/>
`;
